[tool.poetry]
name = "cdm-tools"
version = "0.1.0"
description = ""
authors = ["lunelson-deloitte <lunelson@deloitte.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "2.7"
pyspark = "3.3.2"
attrs = "^23.2.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
